# scholarsparkAuth

./: .env  .gitignore  Dockerfile  README.md  atlas.hcl  docker-compose.yaml  loki-config.yaml  pyproject.toml  readme.md  requirements.txt  service.yaml  shared-infra-0.1.2.tgz  skaffold.yaml  tempo.yaml
.github/workflows/: release-chart.yml  release-charts.yml
app/: main.py
app/api/v1/: router.py
app/core/: config.py  dbUtils.py  emailUtilities.py  ipUtils.py  rateLimiter.py  securityUtils.py
app/dependencies/: user.py
app/migrations/: 000_create_database.sql  001_create_user_table.sql  001_create_users_table.hcl  001_initial.sql  atlas.sum
app/repositories/: userRepository.py
app/schema/: user.py
helm/: Chart.yaml  values.yaml
helm/auth-service/: Chart.yaml  values.yaml
helm/auth-service/templates/: authService.yaml  deployment.yaml  postgres.yaml  service.yaml
helm/templates/: authService.yaml  deployment.yaml  redi.yaml  secrets.yaml  service.yaml
scripts/: setup-dev.sh
